Set package.json homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "colorly",
   "version": "0.1.0",
+  "homepage": "https://adamgraham.github.io/colorly/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
